# multi_agent_system

./: README.md  pyproject.toml
src/: database.py  main.py
src/api/routes/: admin.py  chat.py  knowledge.py  review.py
src/config/: prompts.yaml  settings.yaml
src/frontend/: app.js  chat.js  index.html  ingest.html  styles.css
src/models/: knowledge.py
src/services/: ingestion.py  llm.py  rag.py  scheduler.py  scraper.py
src/vector_store/: batch_ingest.py  check_milvus_status.py  config.py  ingest_single.py  init_db.py  milvus_client.py  test_collection.py  test_embedding.py
