[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Multi-Scenario Agent System with Milvus and LangChain"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pymilvus>=2.4.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.7",
    "langchain-huggingface>=0.0.3",
    "sqlalchemy>=2.0.30",
    "apscheduler>=3.10.4",
    "pdfplumber>=0.11.0",
    "unstructured>=0.14.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "langchain-milvus>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
